completed admin api's
